--- a/hw1/p3.tex
+++ b/hw1/p3.tex
@@ -70,7 +70,7 @@
                 (q3) edge[loop right, right] node {$0, 1$} (q3);
         \end{tikzpicture}
         \caption{Accept all strings in $\set{0, 1}^*$ except those containing $110$.}
-        \label{fig:not-100-101}
+        \label{fig:not-contain-110}
       \end{figure}
 
     \end{Answer}
