--- a/hw1/p4.tex
+++ b/hw1/p4.tex
@@ -48,7 +48,7 @@ Explain, in one or two sentences, the idea behind your DFA construction
             (q3) edge[loop right, right] node {$0, 1$} (q3);
     \end{tikzpicture}
     \caption{Accept all strings with at least one $0$ in each block of $3$.}
-    \label{fig:at-least-3}
+    \label{fig:at-least-0ne-0-in-each-block-of-3}
   \end{figure}
 
     % Combine the two DFAs
