--- a/common/macros.tex
+++ b/common/macros.tex
@@ -154,6 +154,10 @@
 % Header BOX
 \newcommand{\PSET}[5]{\handout{#1}{#2}{Prof.\ #3}{Student: #4}{PSET #1}{#5}}
 
+\newcommand{\homework}[5]{\handout{#1}{#2}{Prof.\ #3}{Student: #4}{Homework assigned #1}{#5}}
+
+\newcommand{\reading}[5]{\handout{#1}{#2}{Prof.\ #3}{Student: #4}{Reading assigned #1}{#5}}
+
 % Credit Statement
 \newcommand{\CreditStatement}[1]{
   \noindent
@@ -164,14 +168,15 @@
   { #1 }
 }
 
-% Problem counter
+% Problem Counter
 \newenvironment{problem}[1][]%
 {%
-\stepcounter{problem} \vspace{.2cm} \noindent {\bf \arabic{problem}.} {\textit{#1}}~%
+\stepcounter{problem}
+\setcounter{section}{\value{problem}}
+\vspace{.2cm} \noindent {\center  \textbf{\\ Problem \arabic{problem}.\\}} {\noindent}~%
 }{%
-\vspace{.2cm}%
+% \vspace{.2cm}%
 }
-
 % Package Imports
 \usepackage{amssymb,amsthm,amsmath,amstext}
 \usepackage{mathdots} % for \dots
@@ -197,6 +202,9 @@
 \newcommand{\black}{\textcolor{black}}
 \newcommand{\darkgreen}{\textcolor{DarkOliveGreen}}
 \newcommand{\green}{\textcolor{OliveGreen}}
+
+% Block coloring
+\newenvironment{blockcolor}{\par \color{crimson} {\par}}
 
 % \newcommand{\id}{\mathbf{id}\;}
 
@@ -239,21 +247,16 @@
 
 \newcommand{\cvsubsection}[1]{\subsection*{\hspace{1.45em}#1}}
 
+\usepackage{enumitem}
 
 % enumalph
 \newenvironment{enumalph}{
-  \begin{enumerate}
-  \renewcommand{\labelenumi}{
-    \textnormal{(\alph{enumi})}
-  }
+  \begin{enumerate}[label=(\alph*)]
 }{\end{enumerate}}
 
 % enumroman
 \newenvironment{enumroman}{
-  \begin{enumerate}
-  \renewcommand{\labelenumi}{
-    \textnormal{(\roman{enumi})}
-  }
+  \begin{enumerate}[label=(\roman*)]
 }{\end{enumerate}}
 
 \newenvironment{problab}[1]
@@ -387,3 +390,22 @@
 \def\rightouterjoin{\mathbin{\bowtie\mkern-5.8mu\ojoin}}
 \def\fullouterjoin{\mathbin{\ojoin\mkern-5.8mu\bowtie\mkern-5.8mu\ojoin}}
 
+\newcounter{problem}
+\setcounter{problem}{0}
+
+\renewcommand{\theenumi}{\alph{enumi}}
+
+\usepackage{MnSymbol}
+\def \backmodels{\leftmodels}
+
+
+\usepackage[english]{cleveref}
+
+\def \vbar{\overline{v}}
+\DeclareRobustCommand\iff{\;\Longleftrightarrow\;}
+\DeclareRobustCommand\lto{\rightarrow}
+\DeclareRobustCommand\backimplies{\Longleftarrow}
+
+\DeclareRobustCommand{\step}{\vspace{0.5em}\noindent}
+
+\DeclareRobustCommand{\set}[1]{\left\{#1\right\}}
