--- a/hw1/cover.tex
+++ b/hw1/cover.tex
@@ -12,3 +12,10 @@
     \item \textbf{A Mathematical Introduction to Logic} by \textbf {Herbert Enderton}.
   \end{enumerate}
 }
+
+
+\pagestyle{fancy}                       % fancy (allow headers, footers)
+\fancyhf{}                              % clear all header/footer settings.
+\cfoot{\thepage}                        % set page-numbers in footer.
+\lhead{\textit{\textbf{ Amittai, S}}}   % set name in header, left.
+\rhead{\textsc{CS 39: Theory of Computation}}         % set class name in header, right.
