--- a/hw1/p3.tex
+++ b/hw1/p3.tex
@@ -1,54 +1,78 @@
-
 \begin{problem}
-  In the Rijndael field $F=\F_2[X]/(X^8+X^4+X^3+X+1)$,
-  where bytes are associated to polynomials modulo $X^8+X^4+X^3+X+1$,
-  compute the product $01010010 \cdot 10010010 \in F$.
-  \end{problem}
-  
-  \begin{Answer}
-  
-  We can represent polynomials in $F$ as binary numbers,
-  where the state of each bit (whether $0$ or $1$) represents whether the
-  corresponding power in the polynomial has a factor of $0$ or $1$.
-  
+  For each of the languages below over the alphabet $\Sigma = \set{0, 1}$,
+  specify a simple DFA by drawing a state diagram.
+
   \noindent
-  Then:
-  \begin{align*}
-    X^8+X^4+X^3+X+1 &= 100011011
-  \end{align*}
-  
-  \noindent
-  Then, we can perform the multiplication modulo 2:
-  \bigskip
-  \center{}
-  \opmul[displayshiftintermediary=all]{1 0 0 1 0 0 1 0}{0 1 0 1 0 0 1 0}
-  
-  \flushleft{}
-  Shifting back to base $2$, we get:
-  $1 0 1 1 0 0 1 0 0 0 0 1 0 0$
-  
-  \noindent
-  We then need to find this number $\mod 100011011$
-  
-  \center{}
-  $\mod{1 0 1 1 0 0 1 0 0 0 0 1 0 0},{1 0 0 0 1 1 0 1 1}$
-  
-  \begin{tabular}{c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}|c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}c@{\,}}
-    1 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 1    & 1 & 0 & 1 & 1 & 0 & 0 & 1 & 0 & 0 & 0 & 0 & 1 & 0 & 0\\
-      &   &   & 1 & 0 & 0 & 0 & 0 & 0    & 1 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 1 &.  &.  &.  &.  &. \\
-      &   &   &   &   &   &   &   &      &   &   & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 &.  &.  &. \\
-      &   &   &   &   & 1 & 0 & 0 & 0    &   &   & 1 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 1 &.  &.  &. \\
-      &   &   &   &   &   &   &   &      &   &   &   & 1 & 1 & 1 & 0 & 0 & 1 & 1 & 1 & 1 &.  &. \\
-      &   &   &   &   &   & 1 & 0 & 0    &   &   &   & 1 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 1 &.  &. \\
-      &   &   &   &   &   &   &   &      &   &   &   &   & 1 & 1 & 0 & 1 & 0 & 1 & 0 & 0 & 0 &. \\
-      &   &   &   &   &   &   & 1 & 0    &   &   &   &   & 1 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 1 &. \\
-      &   &   &   &   &   &   &   &      &   &   &   &   &   & 1 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0\\
-      &   &   &   &   &   &   &   & 1    &   &   &   &   &   & 1 & 0 & 0 & 0 & 1 & 1 & 0 & 1 & 1\\
-  \hline{}
-      &   &   & 1 & 0 & 1 & 1 & 1 & 1    &   &   &   &   &   &   &   & 1 & 1 & 1 & 1 & 1 & 0 & 1\\
-  \end{tabular}
-  
-  \flushleft{}
-  \noindent
-  Thus, the product in $F$ is $1 1 1 1 1 0 1$
-  \end{Answer}
+  Simplicity is important here: don't design unnecessarily complicated DFAs.
+
+  \begin{enumalph}
+    \item The language that accepts only the empty string.
+      \begin{Answer}
+        
+        % Draw the DFA
+        \begin{figure}[H]
+          \centering
+          \begin{tikzpicture}
+            \node[state, initial, accepting] (q0) at (0, 0) {$q_0$};
+            \node[state, right of=q0] (q1) {$q_1$};
+            \draw (q0) edge[above] node {$0, 1$} (q1)
+                  (q1) edge[loop above, above] node {$0, 1$} (q1);
+          \end{tikzpicture}
+          \caption{Only accept the empty string.}
+          \label{fig:empty}
+        \end{figure}
+
+      \end{Answer}
+
+    \item The set of all strings that in $\Sigma^*$ except $100$ and $101$.
+      \begin{Answer}
+        % Draw the DFA 
+
+        \begin{figure}[H]
+          \centering
+          \begin{tikzpicture}
+            \node[state, initial, accepting] (q0) at (0, 0) {$q_0$};
+            \node[state, accepting, right of=q0] (q1) {$q_1$};
+            \node[state, accepting, right of=q1] (q2) {$q_2$};
+            \node[state, right of=q2] (q3) {$q_3$};
+            \node[state, accepting, right of=q3] (q4) {$q_4$};
+            \draw (q0) edge[above] node {$1$} (q1)
+                  (q0) edge[bend left, above] node {$0$} (q4)
+                  (q1) edge[above] node {$0$} (q2)
+                  (q1) edge[bend right, below] node {$1$} (q4)
+                  (q2) edge[above] node {$0, 1$} (q3)
+                  (q3) edge[above] node {$0, 1$} (q4)
+                  (q4) edge[loop right, right] node {$0, 1$} (q4);
+          \end{tikzpicture}
+          \caption{Accept all strings in $\set{0, 1}^*$ except $100$ and $101$.}
+          \label{fig:not-100-101}
+        \end{figure}
+
+      \end{Answer}
+
+    \item $\set{x \in \Sigma^* : x \text{ does not contain the substring } 110}$.
+    \begin{Answer}
+      % Draw the DFA 
+
+      \begin{figure}[H]
+        \centering
+        \begin{tikzpicture}
+          \node[state, initial, accepting] (q0) at (0, 0) {$q_0$};
+          \node [state, accepting, right of=q0] (q1) {$q_1$};
+          \node [state, accepting, right of=q1] (q2) {$q_2$};
+          \node [state, right of=q2] (q3) {$q_3$};
+          \draw (q0) edge[loop above] node {$0$} (q0)
+                (q0) edge[bend left, above] node {$1$} (q1)
+                (q1) edge[bend left, below] node {$0$} (q0)
+                (q1) edge[above] node {$1$} (q2)
+                (q2) edge[loop above] node {$1$} (q2)
+                (q2) edge[above] node {$0$} (q3)
+                (q3) edge[loop right, right] node {$0, 1$} (q3);
+        \end{tikzpicture}
+        \caption{Accept all strings in $\set{0, 1}^*$ except those containing $110$.}
+        \label{fig:not-100-101}
+      \end{figure}
+
+    \end{Answer}
+  \end{enumalph}
+\end{problem}
