--- a/hw1/p1.tex
+++ b/hw1/p1.tex
@@ -1,52 +1,24 @@
-
 \begin{problem}
-  What is the message embedded in the following?
-  
-  \vspace{1ex}
-  \begin{quote}
-  \begin{sffamily}
-  \hspace{2.5ex}Dear George,
-  
-  Greetings to all at Oxford.  Many thanks for \textcolor{crimson}{your}
-  
-  letter and for the Summer examination \textcolor{crimson}{package}.
-  
-  All Entry Forms and Fees Forms should be \textcolor{crimson}{ready}
-  
-  for final despatch to the syndicate by \textcolor{crimson}{Friday}
-  
-  20th or at the very latest, I'm told, by the \textcolor{crimson}{21st}.
-  
-  Admin has improved here, though there's \textcolor{crimson}{room}
-  
-  for improvement still; just give us all two or \textcolor{crimson}{three}
-  
-  more years and we'll really show you! \textcolor{crimson}{Please}
-  
-  don't let these wretched 16+ proposals \textcolor{crimson}{destroy}
-  
-  your basic O and A pattern.  Certainly \textcolor{crimson}{this}
-  
-  sort of change, if implemented \textcolor{crimson}{immediately},
-  
-  would bring chaos.
-  \end{sffamily}
-  \end{quote}
-  \end{problem}
-  
-  \begin{Answer}
-    
-  I thought it was unlikely that the text was actually encrypted 
-  (a strategy that did not work that well on problem 2).
-  On this problem, I tried to look at the words in different positions in the text 
-  --- every first word in a sentence, every last word, every $n$th word, in sentence $n$, etc.
-  \newline
-  \noindent
-  Using this strategy, I deciphered this message (highlighted in red above):
-  \vspace{10pt}
-  \color{crimson}
-  \begin{verbatim}
-  Your package ready Friday 21st, room three. Please destroy this immediately.
-  \end{verbatim}
-  \end{Answer}
-  
+  For a language $L$ over alphabet $\Sigma$, define
+  \begin{align*}
+    \textsc{Cycle}(L) &= \set{yx : x, y \in \Sigma^* \text{ and } xy \in L},\\
+    \textsc{Half}(L) &= \set{x \in \Sigma^* : \exists y \in \Sigma^* (\abs{x} = \abs{y} \text{ and } xy \in L)},\\
+    \textsc{HalfPalindrome}(L) &= \set{x \in \Sigma^* : xx^R \in L }.\\
+  \end{align*}
+  \begin{enumalph}
+    \item Let $A = \set{(01)^n : n \geq 0}$ and $B = \set{0^n1^n : n > 0}$.
+      What is \textsc{Cycle}(A) and \textsc{Cycle}(B)?
+      \begin{Answer}
+        \begin{align*}
+          \textsc{Cycle}(A) &= \set{(01)^m : m \ge 0} \cup \set{(10)^n : n \ge 0}\\
+          \textsc{Cycle}(B) &= \set{0^m1^m : m \ge 0} \cup \set{1^n0^n : n \ge 0}
+        \end{align*}
+      \end{Answer}
+
+    \item Let $C = \set{0^p16q0^r : p, q, r \ge 0 \text{ and } q = p + r}$.
+      What is \textsc{Half}(C) and \textsc{HalfPalindrome}(C)?
+      \begin{Answer}
+        
+      \end{Answer}
+  \end{enumalph}
+\end{problem}
