--- a/common/macros.tex
+++ b/common/macros.tex
@@ -413,6 +413,8 @@
 \DeclareRobustCommand{\step}{\vspace{0.5em}\noindent}
 
 \DeclareRobustCommand{\set}[1]{\left\{#1\right\}}
+\DeclareRobustCommand{\shift}[1]{\; \textsc{DropFirst}\left(#1\right)}
+% \renewcommand{\gcd}[2]{\mathbf{gcd}\;(#1,\;#2)}
 
 % \usepackage{mathtools}
 % \usepackage{unicode-math}
