--- a/common/macros.tex
+++ b/common/macros.tex
@@ -421,4 +421,4 @@
 
 % finite state machines
 \usepackage{tikz}
-\usetikzlibrary{automata, positioning, arrows}
+\usetikzlibrary{automata, positioning, arrows, calc}
