--- a/hw1/p2.tex
+++ b/hw1/p2.tex
@@ -18,7 +18,8 @@
         Therefore, $\textsc{Max}(A) = \varnothing$.
         
       \end{Answer}
-    \item Let $B = 0^m1^n, m, n > 0$. Read carefully; $B \neq A$. What is $\textsc{Min}(B)$ and $\textsc{Max}(B)$?
+    \item Let $B = \set{0^m1^n, m, n > 0}$. Read carefully; $B \neq A$. What is
+    $\textsc{Min}(B)$ and $\textsc{Max}(B)$?
       \begin{Answer}
         \begin{align*}
           \textsc{Min}(B) &= \set{0^m1 : m > 0} \\
