--- a/hw1/p5.tex
+++ b/hw1/p5.tex
@@ -14,20 +14,20 @@
     \centering
     \begin{tikzpicture}
       \node[state, initial, accepting] (q0) at (0, 0) {$q_0$};
-      \node[state, right of=q0] (q1) {$q_1$};
-      \node[state, below of=q1] (q2) {$q_2$};
-      \node[state, right of=q2] (q3) {$q_3$};
-      \node[state, below of=q3] (q4) {$q_4$};
-      \draw (q0) edge[loop below, below] node {$0$} (q0)
-            (q0) edge[above] node {$1$} (q1)
+      \node[state, right of=q0] (q2) {$q_2$};
+      \node[state, below of=q0] (q1) {$q_1$};
+      \node[state, right of=q2] (q4) {$q_4$};
+      \node[state, below of=q4] (q3) {$q_3$};
+      \draw (q0) edge[loop above, above] node {$0$} (q0)
+            (q0) edge[left] node {$1$} (q1)
             (q1) edge[left] node {$0$} (q2)
-            (q1) edge[bend left, above, pos=0.15] node {$1$} (q3)
-            (q2) edge[below] node {$0$} (q4)
-            (q2) edge[below] node {$1$} (q0)
-            (q3) edge[bend left, above, pos=0.65] node {$0$} (q1)
-            (q3) edge[below] node {$1$} (q2)
-            (q4) edge[left] node {$0$} (q3)
-            (q4) edge[loop left, left] node {$1$} (q4);
+            (q1) edge[bend left, above] node {$1$} (q3)
+            (q2) edge[above] node {$0$} (q4)
+            (q2) edge[above] node {$1$} (q0)
+            (q3) edge[bend left, below] node {$0$} (q1)
+            (q3) edge[above] node {$1$} (q2)
+            (q4) edge[right] node {$0$} (q3)
+            (q4) edge[loop above, above] node {$1$} (q4);
     \end{tikzpicture}
     \caption{Accept all strings $x$ where $\beta(x) \equiv 0 \pmod 5$.}
     \label{fig:divisible-by-5}
@@ -43,7 +43,19 @@
     M &= \left( Q,\ \Sigma,\ \delta,\ q_0,\ F \right) \text{ where: }\\
     Q &= \set{q_i : 0 \le i < 5}\\
     \Sigma &= \set{0, 1}\\
-    \delta(q_i, x) &= q_j \text{ where } j = (2i + \beta(x)) \mod 5\\
+    \delta(q_i, x) &= q_j \text{ where } j = ((2i + \beta(x)) \mod 5)
+    &= \begin{cases}
+      q_0 & \text{if } i = 0 \text{ and } x = 0\\
+      q_1 & \text{if } i = 0 \text{ and } x = 1\\
+      q_2 & \text{if } i = 1 \text{ and } x = 0\\
+      q_3 & \text{if } i = 1 \text{ and } x = 1\\
+      q_4 & \text{if } i = 2 \text{ and } x = 0\\
+      q_0 & \text{if } i = 2 \text{ and } x = 1\\
+      q_1 & \text{if } i = 3 \text{ and } x = 0\\
+      q_2 & \text{if } i = 3 \text{ and } x = 1\\
+      q_3 & \text{if } i = 4 \text{ and } x = 0\\
+      q_4 & \text{if } i = 4 \text{ and } x = 1
+    \end{cases}\\
     q_0 &= q_0\\
     F &= \set{q_0}
   \end{align*}
